# gerty

./: .env  .gitignore  README.md  install-gpu-llama.sh  package-lock.json  pyproject.toml  test.py
app/: app.py  run_redis_worker.py
app/api/: __init__.py
app/tasks/: __init__.py
frontend/: .gitignore  package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/chunks/: index.7be621fd.js  index.ddb9a552.js  singletons.6e4cb641.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: app.f3bb717d.js  start.ab84c964.js
frontend/.svelte-kit/output/client/_app/immutable/nodes/: 0.dbac6be8.js  1.174369c6.js  2.fa98da8b.js
frontend/.svelte-kit/output/server/: index.js  manifest.js
frontend/.svelte-kit/output/server/_app/immutable/assets/: _layout.97a8b5e9.css
frontend/.svelte-kit/output/server/chunks/: index2.js  internal.js
frontend/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
frontend/src/lib/: Chat.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
gerty/: embed_db.py  embedding.py  gerty.py  hermes-prompts.py  llama-prompts.py  llm.py  prompts.py  run.py  run_cli.py  utils.py  vectorstore.py  webscrape.py
gerty/models/nous-hermes-llama-2-13b/: prompts.py
instance/: config.py
