[tool.poetry]
name = "gerty"
version = "0.1.0"
description = ""
authors = ["M. Hamada Gasmallah <gasmallahmohammed@gmail.com>"]
readme = "README.md"
packages = [{include = "gerty"}]

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.240"
transformers = "^4.31.0"
llama-cpp-python = "^0.1.74"
faiss-cpu = "^1.7.4"
unstructured = {extras = ["local-inference"], version = "^0.8.1"}
beautifulsoup4 = "^4.12.2"
certifi = "^2023.7.22"
wikipedia = "^1.4.0"
flask = {extras = ["async"], version = "^2.3.2"}
flask-session = "^0.5.0"
gunicorn = "^21.2.0"
memcache = "^0.12.0"
flask-sqlalchemy = "^3.0.5"
sqlalchemy = "^2.0.19"
apscheduler = "^3.10.1"
flask-apscheduler = "^1.12.4"
rq = "^1.15.1"
scikit-learn = "^1.3.0"
flask-cors = "^4.0.0"

[tool.poetry.scripts]
gendb = "gerty.embed_db:run"
run-cli = "gerty.run_cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
