[tool.poetry]
name = "gerty"
version = "0.1.0"
description = ""
authors = ["M. Hamada Gasmallah <gasmallahmohammed@gmail.com>"]
readme = "README.md"
packages = [{include = "gerty"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
langchain = "^0.0.262"
transformers = "^4.31.0"
llama-cpp-python = "^0.1.77"
faiss-cpu = "^1.7.4"
unstructured = {extras = ["local-inference"], version = "^0.8.1"}
beautifulsoup4 = "^4.12.2"
certifi = "^2023.7.22"
wikipedia = "^1.4.0"
flask = {extras = ["async"], version = "^2.3.2"}
flask-session = "^0.5.0"
gunicorn = "^21.2.0"
memcache = "^0.12.0"
flask-sqlalchemy = "^3.0.5"
sqlalchemy = "^2.0.19"
apscheduler = "^3.10.1"
flask-apscheduler = "^1.12.4"
rq = "^1.15.1"
scikit-learn = "^1.3.0"
flask-cors = "^4.0.0"
toml = "^0.10.2"
chromadb = "^0.4.5"
pysqlite3-binary = "^0.5.1"
lark = "^1.1.7"
qdrant-client = "^1.4.0"
sentence-transformers = "^2.2.2"

[tool.poetry.scripts]
gendb = "gerty.embed_db:run"
run-cli = "gerty.run_cli:run"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
